--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="utf-8" />
-  <title>Ionic App</title>
+    <base href="/" />
+    <title>Angular 7 User Registration and Login Example</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <base href="/" />
+    <!-- bootstrap css -->
+    <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" />
 
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="msapplication-tap-highlight" content="no" />
-
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-
-  <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <style>
+        a { cursor: pointer }
+    </style>
 </head>
-
 <body>
-  <app-root></app-root>
+    <app>Loading...</app>
 </body>
-
 </html>
